Fix for mobile z-index issue

--- a/components/sidebar/sidebar.module.css
+++ b/components/sidebar/sidebar.module.css
@@ -5,6 +5,7 @@
     border-radius: 0px 20px 0px 0px;
     position: fixed;
     top: 0px;
+    z-index: 999;
 }
 
 .image {
